--- a/CGELib/CGELib.csproj
+++ b/CGELib/CGELib.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Engines\VisualEngine.cs" />
     <Compile Include="Console\FigletFont.cs" />
     <Compile Include="Interfaces\IScene.cs" />
+    <Compile Include="Interfaces\IVisual.cs" />
     <Compile Include="Math\Point.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Engines\TimedEngine.cs" />
@@ -62,7 +63,6 @@
     <Compile Include="Interfaces\ISprite.cs" />
     <Compile Include="Math\Utility.cs" />
     <Compile Include="Math\Vector.cs" />
-    <Compile Include="Sprites\ActingSprite.cs" />
     <Compile Include="Sprites\Shapes\Actors\CircleActor.cs" />
     <Compile Include="Sprites\Shapes\Actors\SquareActor.cs" />
     <Compile Include="Sprites\Shapes\Actors\TextActor.cs" />
@@ -70,5 +70,6 @@
     <Compile Include="Sprites\Shapes\Square.cs" />
     <Compile Include="Sprites\Sprite.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
